@@ -1,3 +1,4 @@
+Revision 130 	 2011-07-08 	 Refactoring quote_of_the_day.py 
 Revision 129 	 2011-07-07 	 Fixing crontab 
 Revision 128 	 2011-07-07 	 Fixing crontab 
 Revision 127 	 2011-07-07 	 Adding quote of the day 
